# detr

./: engine.py  main.py  pyproject.toml
models/: detr.py  transformer.py
notebooks/: detr_demo.ipynb
